# device_soc_telink

./: BUILD.gn  End User License Agreement.md  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  NOTICE.md  OAT.xml  README.en.md  README.md  README_zh.md  device_soc_telink.diff
b91/: BUILD.gn  Kconfig.liteos_m.defconfig.b91  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  liteos.ld
b91/adapter/hals/mbedtls/: BUILD.gn
b91/adapter/hals/mbedtls/telink_config/: config_liteos_m.h
b91/adapter/hals/update/: BUILD.gn  hal_hota_board.c
b91/adapter/hals/utils/file/: BUILD.gn
b91/b91_ble_sdk/: BUILD.gn  boot.link  config.h  drivers.h  sdk_version.txt  tl_check_fw.bat  tl_common.h
b91/b91_ble_sdk/algorithm/: algorithm.h
b91/b91_ble_sdk/algorithm/aes_ccm/: aes_ccm.h
b91/b91_ble_sdk/algorithm/crypto/: crypto_alg.h
b91/b91_ble_sdk/algorithm/ecc/: ecc_curve.h  ecc_ll.h  hw_ecc.h
b91/b91_ble_sdk/algorithm/lc3/inc/: config.h  lc3_common.h  lc3_dec.h  lc3_enc.h  lc3_types.h
b91/b91_ble_sdk/algorithm/lc3/src/: arithmatic_decoder.h  basic_op.h  bitstream_decoder.h  common_func.h  constant.h  dump.h  encoder_function.h  func_asm.h  global_gain.h  intrinsic.h  ltpf_decoder.h  mdct_decoder.h  noise_filling.h  residual_decoder.h  sns_decoder.h  tns_decoder.h
b91/b91_ble_sdk/application/: rf_frame.h
b91/b91_ble_sdk/application/app/: usbaud.c  usbaud.h  usbaud_i.h  usbcdc.c  usbcdc.h  usbcdc_i.h  usbkb.c  usbkb.h  usbkb_i.h  usbmouse.c  usbmouse.h  usbmouse_i.h
b91/b91_ble_sdk/application/audio/: adpcm.c  adpcm.h  audio_common.h  audio_config.h  gl_audio.h  sbc.h  tl_audio.c  tl_audio.h
b91/b91_ble_sdk/application/keyboard/: keyboard.c  keyboard.h
b91/b91_ble_sdk/application/print/: printf.c  printf.h
b91/b91_ble_sdk/application/usbstd/: AudioClassCommon.h  CDCClassCommon.h  CDCClassDevice.h  HIDClassCommon.h  HIDClassDevice.h  HIDReportData.h  MassStorageClassCommon.h  PrinterClassCommon.h  StdRequestType.h  USBController.h  stdDescriptors.h  usb.c  usb.h  usbdesc.c  usbdesc.h  usbkeycode.h
b91/b91_ble_sdk/boot/B91/: boot_DLM.link  boot_general.link  cstartup_B91.S  cstartup_B91_DLM.S
b91/b91_ble_sdk/common/: assert.h  bit.h  compiler.h  macro_trick.h  static_assert.h  types.h  utility.c  utility.h
b91/b91_ble_sdk/common/buf_pool0/: myBuf.c  myBuf.h  myHeap.c  myHeap.h
b91/b91_ble_sdk/common/buf_pool1/: Readme.txt  ev_buffer.c  ev_buffer.h  mempool.c  mempool.h  zb_buffer.c  zb_buffer.h
b91/b91_ble_sdk/common/config/: user_config.h
b91/b91_ble_sdk/common/usb_dbg/: log_def_stack.h  myudb.h  myudb_usb.c  myudb_usbdesc.c  myudb_usbdesc.h
b91/b91_ble_sdk/drivers/B91/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.h  dma.h  driver_B91.h  driver_b91.h  emi.c  emi.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.h  npe.c  npe.h  pke.c  pke.h  plic.c  plic.h  pm.h  pwm.c  pwm.h  rf.h  s7816.c  s7816.h  (+15 more)
b91/b91_ble_sdk/drivers/B91/compatibility_pack/: cmpt.h
b91/b91_ble_sdk/drivers/B91/ext_driver/: driver_ext.h  ext_gpio.c  ext_gpio.h  ext_pm.h  (+4 more)
b91/b91_ble_sdk/proj_lib/: firmware_encrypt.h
b91/b91_ble_sdk/stack/ble/: ble.h  ble_common.h  ble_config.h  ble_format.h  debug.h  trace.h
b91/b91m_ble_sdk/: BUILD.gn  boot.link  config.h  drivers.h  tl_common.h
b91/b91m_ble_sdk/algorithm/: algorithm.h
b91/b91m_ble_sdk/algorithm/aes_ccm/: aes_ccm.h
b91/b91m_ble_sdk/algorithm/crypto/: crypto_alg.h
b91/b91m_ble_sdk/algorithm/ecc/: ecc_curve.h  ecc_ll.h  hw_ecc.h
b91/b91m_ble_sdk/application/: rf_frame.h
b91/b91m_ble_sdk/application/app/: usbaud.c  usbaud.h  usbaud_i.h  usbcdc.c  usbcdc.h  usbcdc_i.h  usbkb.c  usbkb.h  usbkb_i.h  usbmouse.c  usbmouse.h  usbmouse_i.h
b91/b91m_ble_sdk/application/audio/: adpcm.c  adpcm.h  audio_common.h  audio_config.h  tl_audio.c  tl_audio.h
b91/b91m_ble_sdk/application/keyboard/: keyboard.c  keyboard.h
b91/b91m_ble_sdk/application/print/: printf.c  printf.h
b91/b91m_ble_sdk/application/usbstd/: AudioClassCommon.h  CDCClassCommon.h  CDCClassDevice.h  HIDClassCommon.h  HIDClassDevice.h  HIDReportData.h  MassStorageClassCommon.h  PrinterClassCommon.h  StdRequestType.h  USBController.h  stdDescriptors.h  usb.c  usb.h  usbdesc.c  usbdesc.h  usbkeycode.h
b91/b91m_ble_sdk/boot/B91/: boot_DLM.link  boot_general.link  cstartup_B91.S  cstartup_B91_DLM.S
b91/b91m_ble_sdk/common/: assert.h  bit.h  compiler.h  macro_trick.h  static_assert.h  types.h  utility.c  utility.h
b91/b91m_ble_sdk/common/buf_pool0/: myBuf.c  myBuf.h  myHeap.c  myHeap.h
b91/b91m_ble_sdk/common/buf_pool1/: ev_buffer.c  ev_buffer.h  mempool.c  mempool.h  zb_buffer.c  zb_buffer.h
b91/b91m_ble_sdk/common/config/: user_config.h
b91/b91m_ble_sdk/common/usb_dbg/: log_def_stack.h  myudb.h  myudb_usb.c  myudb_usbdesc.c  myudb_usbdesc.h
b91/b91m_ble_sdk/drivers/B91/: adc.c  adc.h  aes.c  aes.h  analog.c  analog.h  audio.c  audio.h  clock.c  clock.h  core.h  dma.h  driver_b91.h  emi.c  emi.h  flash.c  flash.h  gpio.c  gpio.h  gpio_default.h  i2c.c  i2c.h  lpc.c  lpc.h  mdec.c  mdec.h  mspi.h  npe.c  npe.h  pke.c  pke.h  plic.c  plic.h  pm.h  pwm.c  pwm.h  rf.h  s7816.c  s7816.h  spi.c  (+14 more)
b91/b91m_ble_sdk/proj_lib/: firmware_encrypt.h
b91/b91m_ble_sdk/stack/ble/: ble.h  ble_common.h  ble_config.h  ble_format.h  debug.h  trace.h
b91/components/: BUILD.gn
b91/components/fs/: BUILD.gn  fs_init.c
b91/hcs/: hdf.hcs
b91/hcs/device_info/: device_info.hcs
b91/hcs/fs/: fs_config.hcs
b91/hcs/gpio/: gpio_config.hcs
b91/hcs/uart/: uart_config.hcs
b91/hdf/: BUILD.gn  gpio_telink.c
b91/hdf/uart/: hdf_log_adapter_debug.h  uart_telink.c  uart_tlsr9518.c  uart_tlsr9518.h
b91/liteos_m/: BUILD.gn
b91/liteos_m/inc/: b91_irq.h  bootloader.h  power_b91.h  system_b91.h
b91/liteos_m/src/: _stub.c  board_config.c  bootloader.c  canary.c  canary.h  fs.c  inject_start.S  littlefs_hal.c  main.c  ota_uart_test.c  ota_uart_test.h  power_b91.c  reset_vector.S  riscv_irq.c  system.c  system_b91.c
util/: util.gni
(+235 files in other folders)
