# Copyright (c) 2022 Telink Semiconductor (Shanghai) Co., Ltd. ("TELINK")
# All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//kernel/liteos_m/liteos.gni")
import("//drivers/adapter/khdf/liteos_m/hdf.gni")

#driver_sdk_path = "b91m_ble_sdk"
driver_sdk_path = "b91_ble_sdk"

config("B91_config") {
    defines = [
        "__PROJECT_B91_EXTERNAL=1"
    ]

    include_dirs = [
        "liteos_m/inc",
        "$driver_sdk_path",
        "$driver_sdk_path/common",
        "$driver_sdk_path/drivers",
        "$driver_sdk_path/drivers/B91",
        "$driver_sdk_path/vendor/common",
    ]

    configs = [
        "//drivers/adapter/khdf/liteos_m:hdf_config",
        "$driver_sdk_path:public",
    ]
}

module_name = get_path_info(rebase_path("."), "name")

module_group(module_name) {
  deps = [
    driver_sdk_path,
    "hdf",
  ]
  modules = [
    "liteos_m",
  ]
}
