# Copyright (c) 2022 Telink Semiconductor (Shanghai) Co., Ltd. ("TELINK")
# All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("b91_ble_sdk") {
  sources = [
    "common/utility.c",
    "drivers/B91/aes.c",
    "drivers/B91/analog.c",
    "drivers/B91/clock.c",
    "drivers/B91/ext_driver/ext_gpio.c",
    "drivers/B91/ext_driver/software_pa.c",
    "drivers/B91/flash.c",
    "drivers/B91/gpio.c",
    "drivers/B91/pke.c",
    "drivers/B91/stimer.c",
    "drivers/B91/uart.c",
  ]

  sources += [
    #"vendor/common/simple_sdp.c",
    "vendor/common/blt_common.c",
    "vendor/common/custom_pair.c",

    #"vendor/common/device_manage.c",
  ]

  libs = [ "proj_lib/liblt_9518_liteos.a" ]

  configs += [ "..:B91_config" ]
}

config("public") {
  defines = [
    "TELINK_SDK_B91_BLE_MULTI=1",
    "UART_PRINT_DEBUG_ENABLE=1",
  ]
}
