# Copyright (c) 2022 Telink Semiconductor (Shanghai) Co., Ltd. ("TELINK")
# All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")
import("//third_party/mbedtls/mbedtls.gni")

config("mbedtls_config") {
  include_dirs = [ "." ] + MBEDTLS_INLCUDE_DIRS + [ "src/mbedtls" ]
  defines += [
    "__unix__",
    "MBEDTLS_CONFIG_FILE=<telink_config/config_liteos_m.h>",
  ]

  configs = [ "../../../:B91_config" ]
}

lite_library("mbedtls_static") {
  target_type = "static_library"
  public_configs = [ ":mbedtls_config" ]
  sources = MBEDTLS_SOURCES + [
              "src/mbedtls/internal/ecp_alt_b91_backend_test.c",
              "src/mbedtls/internal/ecp_alt_b91_backend.c",
              "src/mbedtls/internal/entropy_poll_alt.c",
              "src/mbedtls/internal/multithread.c",
              "src/mbedtls/internal/test_utils.c",
              "src/mbedtls/internal/compatibility/aes_alt.c",
              "src/mbedtls/internal/compatibility/ecp_alt.c",
              "src/mbedtls/internal/compatibility/ecp_curves_alt.c",
            ]
}

group("mbedtls") {
  public_deps = [ ":mbedtls_static" ]
  public_configs = [ ":mbedtls_config" ]
}

ndk_lib("mbedtls_ndk") {
  lib_extension = ".a"
  deps = [ ":mbedtls" ]
  head_files = [ "include" ]
}
